Signup.css
        * {
            box-sizing: border-box;
        }

        html, body {
            margin: 0;
            padding: 0;
            min-height: 100%;
        }

        body {
            margin: 0;
            font-family: Georgia, serif;
            background-color: #F2F2F2;
            color: #222;        
        }
        /* Nav Bar */
         .navbar {
            height: 78px;
            background-color: #e9e9e9;
            border-bottom: 1px solid #d0d0d0;
            display: flex;
            justify-content: space-between;
            align-items: center;
            padding: 0 28px;
         }

        /* Budget logo color black */
        .logo {
            font-size: 46px;
            font-weight: bold;
            text-decoration: none;
            color: black;
        }

        /* Lens logo color blue */
        .logo span {
            color: #5d91a8;
            font-weight: bold;
        }

        /* Sign up buttn */
        .nav-btn {
            text-decoration: none;
            background: white;
            color: #555;
            border: 1px solid #d0d0d0;
            border-radius: 14px;
            padding: 14px 28px;
            font-size: 18px;
            box-shadow: 0 3px 8px rgba(0, 0, 0, 0.12);
            display: inline-block;
        }

        /* Page Centering */
        .page-wrapper {
            min-height: calc(100vh - 78px);
            display: flex;
            justify-content: center;
            align-items: flex-start;
            padding: 45px 20px 30px;
        }

        /* Makes sure that the buttons stay to the right of the page */
        .nav-buttons {
            padding: 10px 18px;
            margin-right: 10px;
            font-size: 16px;
            border-radius: 8px;
            cursor: pointer;
            border: none;
        }
        .signup{
            background: white;
            border: 1px solid #ccc;
        }
        
        /* log in container */
        .container {
            display: flex;
            justify-content: center;
            width: 100%;
        }
        /* log in card */
        .card {
            width: 540px;
            background: #f8f8f8;
            border-radius: 22px;
            box-shadow: 0 8px 22px rgba(0, 0, 0, 0.16);
            padding: 32px 48px 35px;
            text-align: center;
        }
        
        /* log in title */
        .card h2 {
            margin: 0;
            font-size: 34px;
            font-weight: 700;
            color: #000;  
        }

        /* Subtext */
        .card p {
            margin: 10px auto 28px;
            font-size: 17px;
            color: #767676;
            font-weight: 600;
            max-width: 360px;
            line-height: 1.2;
        }

        /* Form */
        .form-group {
            text-align: left;
            margin-bottom: 20px;
        }
        .form-group label {
            display: block;
            margin-bottom: 8px;
            font-size: 16px;
            color: #969696;
            letter-spacing: 0.5px;
        }
        .form-group input {
            width: 100%;
            height: 42px;
            padding: 0 14px;
            font-size: 14px;
            font-family: Georgia, Serif;
            font-style: italic;
            border: 1px solid #d2d2d2;
            border-radius: 9px;
            color: #666;
            background-color: #fafafa;
        }

         /* Create Account Button */
        .createaccount-btn {
            width: 190px;
            height: 42px;
            border: none;
            border-radius: 10px;
            background-color: #5f8fa6;
            color: white;
            font-size: 18px;
            font-family: Georgia, Serif;
            cursor: pointer;
            margin: 8px auto 18px;
            display: block;
        }

        .footer-text {
            font-size: 18px;
            color: #222;
            text-align: center;
        }

        .footer-text a {
            color: #5f8fa6;
            text-decoration: none;
        }

        .nav-btn:hover, .creat-btn:hover, .footer-text a:hover,
        .forgot:hover {
            opacity: 0.9;
        }

